--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ main h1 {
 @media screen and (min-width: 1024px) {
     main {
         width: 850px;
+        height: 450px;
         display: flex;
     }
 
